--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #13151f;
+  color: #fff;
 }
 
 a {
@@ -14,13 +16,59 @@ a {
 * {
   box-sizing: border-box;
 }
+.app {
+  margin: 20px;
+}
+.navbar {
+  /* position: absolute; */
+  height: 70px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+.main_video {
+  width: 100%;
+  height: 70vh;
+  overflow: hidden;
+  margin-bottom: 30px;
+}
+img {
+  width: 100%;
+  height: 100%;
+}
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+.Card {
+  width: 20%;
+  height: auto;
+  margin: 2px;
+  filter: drop-shadow(5px 5px 10px #000);
+  border-radius: 5px;
+}
+.video_image {
+  position: absolute;
+  top: 0;
+  width: 100%;
+}
+.info {
+  position: relative;
+  margin-top: 30%;
+  margin-left: 50px;
+  max-width: 50%;
+}
+.Play_btn {
+  padding: 8px 16px;
+}
+.footer {
+  height: 100vh;
+}
+
+.account-info {
+  display: flex;
+  height: 50%;
+}
+.avatar {
+  width: 38px;
+  height: 38px;
+  border-radius: 50%;
+  margin-left: 18px;
 }
